feat: optimize Dockerfile with jlink and jdeps